# inventory_management_system_backend

./: Dockerfile  config.py  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 070c8ae5def2_.py  120065025b6c_init.py  1605eb05e318_.py  1634c97be119_init.py  16ba75ab93a4_.py  21a38ad06140_.py  2970fff2110e_.py  2b23b4fe062c_.py  2d7a58019deb_dupa.py  2e4536aedcdc_.py  330b68564d7a_.py  575c7c1f67cf_.py  6612b0bdabee_.py  6a1af7c411c1_init.py  73debfba3e3a_.py  86fd83c7a373_.py  89a1a3c3ee57_init.py  ada90fcd51b4_.py  bf7ea4482b2a_.py  d6fbcc85c5f8_.py  e5af455358a5_.py  f3096d79d259_.py  fd522ea6b5ee_.py
app/: database.py  main.py
app/configs/: config.py  containers.py
app/models/: __init__.py  asset.py  asset_logs.py  base.py  base_class.py  category.py  company.py  department.py  location.py  manufacturer.py  model.py  supplier.py  token.py  user.py
app/repositories/: __init__.py  asset.py  asset_logs.py  base.py  base_repository.py  company.py  company_repository.py  department.py  department_repository.py  location.py  location_repository.py  manufacturer.py  model.py  supplier.py  token.py  token_repository.py  user.py  user_repository.py
app/routers/: __init__.py  auth.py  users.py
app/schemes/: __init__.py  asset.py  asset_logs.py  checkout_type.py  company.py  constraints.py  department.py  error.py  generc_pagination.py  generic_params.py  location.py  manufacturer.py  model.py  role_enum.py  status.py  supplier.py  token.py  user.py
app/services/: __init__.py  asset.py  asset_logs.py  auth.py  company.py  department.py  location.py  model.py  (+3 more)
routers/: assets.py  users.py
tests/: conftest.py
(+32 files in other folders)
